--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ios": "expo run:ios",
     "web": "expo start -c --web",
     "export": "expo export -p web",
-    "format": "biome check --no-errors-on-unmatched --apply .",
+    "format": "biome check --no-errors-on-unmatched --write .",
     "db:generate": "bun drizzle-kit generate",
     "db:studio": "bun drizzle-kit studio"
   },
@@ -42,26 +42,26 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "0.31.2",
     "drizzle-zod": "^0.5.1",
-    "expo": "^51.0.0",
+    "expo": "~51.0.20",
     "expo-linking": "~6.3.1",
-    "expo-navigation-bar": "~3.0.4",
-    "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
-    "expo-sqlite": "~14.0.3",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-router": "~3.5.18",
+    "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "lucide-react-native": "^0.314.0",
     "nativewind": "^4.0.36",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
-    "react-native": "0.74.1",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
     "sql.js": "^1.10.3",
     "tailwind-merge": "^2.2.1",
@@ -72,15 +72,13 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/runtime": "^7.24.4",
-    "@types/react": "18.2.0",
+    "@biomejs/biome": "1.8.3",
+    "@types/react": "~18.2.79",
     "@types/sql.js": "^1.4.9",
     "drizzle-kit": "^0.21.2",
     "tailwindcss": "3.4.1",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   },
-  "trustedDependencies": [
-    "tailwindcss",
-    "nativewind"
-  ],
+  "trustedDependencies": ["tailwindcss", "nativewind"],
   "private": true
 }
